src/pycodestyle/snapshots/ruff__pycodestyle__tests__E401_E40.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: MultipleImportsOnOneLine
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 14
  fix: ~
  parent: ~

