src/pycodestyle/snapshots/ruff__pycodestyle__tests__E402_E40.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    ModuleImportNotAtTopOfFile: ~
  location:
    row: 55
    column: 0
  end_location:
    row: 55
    column: 10
  fix: ~
  parent: ~
- kind:
    ModuleImportNotAtTopOfFile: ~
  location:
    row: 57
    column: 0
  end_location:
    row: 57
    column: 10
  fix: ~
  parent: ~
- kind:
    ModuleImportNotAtTopOfFile: ~
  location:
    row: 61
    column: 0
  end_location:
    row: 61
    column: 10
  fix: ~
  parent: ~

