src/pycodestyle/snapshots/ruff__pycodestyle__tests__E402_E402.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: ModuleImportNotAtTopOfFile
  location:
    row: 24
    column: 0
  end_location:
    row: 24
    column: 8
  fix: ~
  parent: ~

