src/pycodestyle/snapshots/ruff__pycodestyle__tests__E713_E713.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: NotInTest
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 13
  fix:
    patch:
      content: X not in Y
      location:
        row: 2
        column: 3
      end_location:
        row: 2
        column: 13
- kind: NotInTest
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 15
  fix:
    patch:
      content: X.B not in Y
      location:
        row: 5
        column: 3
      end_location:
        row: 5
        column: 15
- kind: NotInTest
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 13
  fix:
    patch:
      content: X not in Y
      location:
        row: 8
        column: 3
      end_location:
        row: 8
        column: 13
- kind: NotInTest
  location:
    row: 11
    column: 22
  end_location:
    row: 11
    column: 28
  fix:
    patch:
      content: Y not in Z
      location:
        row: 11
        column: 18
      end_location:
        row: 11
        column: 28
- kind: NotInTest
  location:
    row: 14
    column: 8
  end_location:
    row: 14
    column: 14
  fix:
    patch:
      content: X not in Y
      location:
        row: 14
        column: 3
      end_location:
        row: 14
        column: 15

