src/pycodestyle/snapshots/ruff__pycodestyle__tests__E714_E714.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: NotIsTest
  location:
    row: 2
    column: 7
  end_location:
    row: 2
    column: 13
  fix:
    patch:
      content: X is not Y
      location:
        row: 2
        column: 3
      end_location:
        row: 2
        column: 13
- kind: NotIsTest
  location:
    row: 5
    column: 7
  end_location:
    row: 5
    column: 15
  fix:
    patch:
      content: X.B is not Y
      location:
        row: 5
        column: 3
      end_location:
        row: 5
        column: 15
- kind: NotIsTest
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 22
  fix: ~

