src/pycodestyle/snapshots/ruff__pycodestyle__tests__E722_E722.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind:
    DoNotUseBareExcept: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 6
  fix: ~
  parent: ~
- kind:
    DoNotUseBareExcept: ~
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 6
  fix: ~
  parent: ~
- kind:
    DoNotUseBareExcept: ~
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 6
  fix: ~
  parent: ~

