src/pycodestyle/snapshots/ruff__pycodestyle__tests__E731_E731.py.snap
---
source: src/pycodestyle/mod.rs
expression: checks
---
- kind: DoNotAssignLambda
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 19
  fix:
    patch:
      content: "def f(x):\n    return (2 * x)"
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 19
- kind: DoNotAssignLambda
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 19
  fix:
    patch:
      content: "def f(x):\n    return (2 * x)"
      location:
        row: 4
        column: 0
      end_location:
        row: 4
        column: 19
- kind: DoNotAssignLambda
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 29
  fix:
    patch:
      content: "def this(y, z):\n        return (2 * x)"
      location:
        row: 7
        column: 4
      end_location:
        row: 7
        column: 29

